# autobug-mcp

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml  users.json
examples/: config.toml  mcp_request.json
src/auto_bug/: __init__.py  cli.py  config.py  core.py  llm.py  logs.py  mcp_server.py  models.py  renderer.py  storage.py
templates/: bug_report.md.j2  debug_report.md.j2
tests/: test.py  test_auth.py  test_orders.json
